# miniTransformer

./: .env.sample  .gitignore  .python-version  Makefile  README.md  combined.model  combined.vocab  old_requirements.txt  pyproject.toml  requirements.txt  setup.py
miniTransformer/: __init__.py  main.py  main_old.py
miniTransformer/architecture/: bigram.py  head.py  losses.py  transformer_block.py
miniTransformer/checkpoints/: checkpoint_0.pt  checkpoint_100.pt  checkpoint_200.pt  checkpoint_300.pt  checkpoint_400.pt  checkpoint_499.pt
miniTransformer/featuretesting/: mytokenizer.py  tokenizerscratch.py
miniTransformer/fitting/: train.py
miniTransformer/generate/: generate.py
miniTransformer/model/: GPT_model.py  bigram.py  bigram_language_model.py  generate.py  head.py  losses.py  multihead_attention.py  transformer_block.py
miniTransformer/preprocessing/: base_tokenizer.py  train_tokenizer.py
miniTransformer/preprocessing/sourcing/: sourcing.py
miniTransformer/preprocessing/tokenizers/: GPT4_tokenizer.py  base_tokenizer.py  (+3 more)
miniTransformer/sourcing/: sourcing.py
miniTransformer/testing/: embedding.py  tokenizer.json
miniTransformer/trainer/: train.py
miniTransformer/training/: train.py
miniTransformer/utils/: parse_arguments.py
miniTransformer/visuzalization/: visualize_attention.py
notebooks/: FUNCIONANDO_MINITRANSFORMER.ipynb  test.ipynb  test2.ipynb
results/models/: basic.model  basic.vocab  regex.model  regex.vocab
tests/: test_model_initialization.py  test_sourcing.py  test_tokenization.py  test_visualization.py
(+5 files in other folders)
